--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "lucide-react": "^0.563.0",
-    "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0",
-    "axios": "^1.13.5"
+    "lucide-react": "0.463.0",
+    "react-router-dom": "7.1.3",
+    "recharts": "2.15.0",
+    "axios": "1.7.9"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
